WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229514
[GPUP] RemoteAudioSession doesn't implement begin/endInterruption
https://bugs.webkit.org/show_bug.cgi?id=229514
Summary
[GPUP] RemoteAudioSession doesn't implement begin/endInterruption
Eric Carlson
Reported
2021-08-25 14:01:39 PDT
RemoteAudioSession doesn't implement begin/endInterruption
Attachments
Patch
(13.69 KB, patch)
2021-08-25 14:13 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(13.74 KB, patch)
2021-08-25 14:20 PDT
,
Eric Carlson
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2021-08-25 14:13:25 PDT
Created
attachment 436424
[details]
Patch
Eric Carlson
Comment 2
2021-08-25 14:20:27 PDT
Created
attachment 436426
[details]
Patch
Eric Carlson
Comment 3
2021-08-25 14:23:19 PDT
rdar://80896732
EWS
Comment 4
2021-08-25 16:07:15 PDT
Committed
r281597
(
240959@main
): <
https://commits.webkit.org/240959@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436426
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug