Source/WebCore/platform/audio/AudioSession.h
@@ -136,7 +136,10 @@ protected:
 
     virtual bool tryToSetActiveInternal(bool);
 
+    WeakHashSet<InterruptionObserver> m_interruptionObservers;
+
     WeakPtr<AudioSessionRoutingArbitrationClient> m_routingArbitrationClient;
+    AudioSession::CategoryType m_categoryOverride { AudioSession::CategoryType::None };
     bool m_active { false }; // Used only for testing.
 
     static bool s_shouldManageAudioSessionCategory;
